# Clearchoice

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  jni_diarization_bridge.cpp  native-lib.cpp
app/src/main/cpp/diarization_module/: embedding_extractor.cpp  embedding_extractor.h  speaker_clusterer.cpp  speaker_clusterer.h  vad_engine.cpp  vad_engine.h
app/src/main/cpp/whisper_cpp/: ggml.c  ggml.h  whisper.cpp  whisper.h
app/src/main/java/com/example/clearchoice/: AudioPreprocessor.kt  AudioRecorderManager.kt  BiometricAuthManager.kt  DiarizationService.kt  ExportService.kt  MainActivity.kt  Metadata.kt  RecordFragment.kt  Redactor.kt  SessionDetailFragment.kt  SessionListFragment.kt  SessionManager.kt  SimpleWhisperActivity.kt  WhisperBridge.kt  WhisperService.kt
app/src/main/res/drawable/: ic_mic_24.xml  ic_view_list_24.xml
app/src/main/res/layout/: activity_main.xml  dialog_export_options.xml  fragment_record.xml  fragment_session_detail.xml  fragment_session_list.xml  list_item_session.xml
app/src/main/res/menu/: menu_bottom_nav.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
